crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_lua_doc_validation_permission_targets_tmp.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 120 30
  0   0   1 fg=AnsiValue(208)
  0   1   5 attrs=dim
  0   7   3 fg=Rgb { r: 102, g: 217, b: 239 }
  0  10   1 fg=Rgb { r: 255, g: 255, b: 255 }
  0  11   2 fg=Rgb { r: 253, g: 151, b: 31 }
  0  13   9 fg=Rgb { r: 255, g: 255, b: 255 }
  0  22   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0  23  26 fg=Rgb { r: 255, g: 255, b: 255 }
  0  49   1 fg=Rgb { r: 190, g: 132, b: 255 }
  0  50   2 fg=Rgb { r: 249, g: 38, b: 114 }
  0  52   1 fg=Rgb { r: 190, g: 132, b: 255 }
  0  53   1 fg=Rgb { r: 255, g: 255, b: 255 }
  0  54   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0  55   5 fg=Rgb { r: 255, g: 255, b: 255 }
  0  60   5 fg=Rgb { r: 253, g: 151, b: 31 }
  0  65   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0  66   7 fg=Rgb { r: 255, g: 255, b: 255 }
  0  73   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0  74   1 fg=Rgb { r: 255, g: 255, b: 255 }
  0  75   1 fg=Rgb { r: 230, g: 219, b: 116 }
  0  76  11 fg=Rgb { r: 255, g: 255, b: 255 }
  0  87   1 fg=Rgb { r: 190, g: 132, b: 255 }
  0  88   1 fg=Rgb { r: 255, g: 255, b: 255 }
  0  89   1 fg=Rgb { r: 230, g: 219, b: 116 }
  0  90   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0  91   1 fg=Rgb { r: 255, g: 255, b: 255 }
  0  92   2 fg=Rgb { r: 249, g: 38, b: 114 }
  0  94   1 fg=Rgb { r: 255, g: 255, b: 255 }
  0  95   1 fg=Rgb { r: 102, g: 217, b: 239 }
  0  96  11 fg=Rgb { r: 255, g: 255, b: 255 }
  0 107   3 fg=Rgb { r: 253, g: 151, b: 31 }
  0 110   3 fg=Rgb { r: 255, g: 255, b: 255 }
  0 113   1 fg=Rgb { r: 102, g: 217, b: 239 }
  0 114   1 fg=Rgb { r: 249, g: 38, b: 114 }
  0 115   1 fg=Rgb { r: 255, g: 255, b: 255 }
  1   0   2 attrs=dim
  1   2   4 fg=Rgb { r: 249, g: 38, b: 114 }
  1   6   1 fg=Rgb { r: 255, g: 255, b: 255 }
  1   7   4 fg=Rgb { r: 102, g: 217, b: 239 }
  1  11  10 fg=Rgb { r: 255, g: 255, b: 255 }
  1  21   1 fg=Rgb { r: 249, g: 38, b: 114 }
  1  22   1 fg=Rgb { r: 255, g: 255, b: 255 }
  1  23   3 fg=Rgb { r: 249, g: 38, b: 114 }
  1  26   9 fg=Rgb { r: 255, g: 255, b: 255 }
  1  35  12 fg=Rgb { r: 253, g: 151, b: 31 }
  1  47   3 fg=Rgb { r: 249, g: 38, b: 114 }
  1  50  68 fg=Rgb { r: 255, g: 255, b: 255 }
  2   0   2 attrs=dim
  2   2  34 fg=Rgb { r: 255, g: 255, b: 255 }
  2  36   1 fg=Rgb { r: 249, g: 38, b: 114 }
  2  37  20 fg=Rgb { r: 255, g: 255, b: 255 }
  2  57   2 fg=Rgb { r: 249, g: 38, b: 114 }
  2  59  26 fg=Rgb { r: 255, g: 255, b: 255 }
  2  85   1 fg=Rgb { r: 249, g: 38, b: 114 }
  2  86   1 fg=Rgb { r: 255, g: 255, b: 255 }
  2  87   4 fg=Rgb { r: 102, g: 217, b: 239 }
  2  91   2 fg=Rgb { r: 255, g: 255, b: 255 }
  2  93   1 fg=Rgb { r: 249, g: 38, b: 114 }
  2  94   2 fg=Rgb { r: 255, g: 255, b: 255 }
 15   0 120 fg=AnsiValue(208)
 16   1   4 fg=AnsiValue(208)
 20   1  34 attrs=dim
 22   1   6 attrs=dim
 23   0   1 bg=AnsiValue(237)
 23   1   1 fg=Black bg=White
 23   2   3 bg=AnsiValue(237) attrs=dim
 23   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 23  15 105 bg=AnsiValue(237)
 24   1   4 attrs=dim
 25   1   4 attrs=dim
 26   1   4 attrs=dim
 28   2  26 attrs=dim
 29   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 29  10 104 bg=AnsiValue(233)
 29 114   6 fg=AnsiValue(244) bg=AnsiValue(233)
