crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_multiline_command_summary.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* bash for f in *.rs; do
    rustfmt "$f"
  done






────────────────────────────────────────────────────────────────────────────────
 bash: for f in *.rs; do
         rustfmt "$f"
       done

 Allow?
  1. allow once
  2. deny
  3. allow for * for this session
  4. allow for * in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
