crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_multiline_command_summary.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 22
  9   0  80 fg=AnsiValue(208)
 10   1   4 fg=AnsiValue(208)
 10   7   3 fg=Rgb { r: 249, g: 38, b: 114 }
 10  10   3 fg=Rgb { r: 255, g: 255, b: 255 }
 10  13   2 fg=Rgb { r: 249, g: 38, b: 114 }
 10  15   1 fg=Rgb { r: 255, g: 255, b: 255 }
 10  16   1 fg=Rgb { r: 249, g: 38, b: 114 }
 10  17   3 fg=Rgb { r: 255, g: 255, b: 255 }
 10  20   1 fg=Rgb { r: 249, g: 38, b: 114 }
 10  21   1 fg=Rgb { r: 255, g: 255, b: 255 }
 10  22   2 fg=Rgb { r: 249, g: 38, b: 114 }
 11   7  14 fg=Rgb { r: 255, g: 255, b: 255 }
 12   7   4 fg=Rgb { r: 249, g: 38, b: 114 }
 14   1   6 attrs=dim
 15   0   1 bg=AnsiValue(237)
 15   1   1 fg=Black bg=White
 15   2   3 bg=AnsiValue(237) attrs=dim
 15   5   3 fg=AnsiValue(208) bg=AnsiValue(237)
 15   8  72 bg=AnsiValue(237)
 16   1   4 attrs=dim
 17   1   4 attrs=dim
 18   1   4 attrs=dim
 20   2  26 attrs=dim
 21   0  80 bg=AnsiValue(233)
