crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_outside_workspace_extra_options.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---











────────────────────────────────────────────────────────────────────────────────
 bash: cat /etc/hosts

 Allow?
  1. yes
  2. no
  3. allow bash:cat, bash:cat/* /etc
  4. allow bash:cat, bash:cat/* /etc in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
