crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_permission_dialog_expanded_max_height.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
────────────────────────────────────────────────────────────────────────────────
 bash: ls -la /tmp/foo
 List files in /tmp/foo











 Allow?
  1. allow once
  2. deny
  3. allow ls * for this session
  4. allow ls * in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
