crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_permission_dialog_expanded_max_height.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 22
  0   0   1 fg=AnsiValue(208)
  0   1   5 attrs=dim
  0   7   2 fg=Rgb { r: 255, g: 255, b: 255 }
  0   9   4 fg=Rgb { r: 253, g: 151, b: 31 }
  0  13   9 fg=Rgb { r: 255, g: 255, b: 255 }
  0  69  10 attrs=dim
  5   0  80 fg=AnsiValue(208)
  6   1   4 fg=AnsiValue(208)
  7   1  22 attrs=dim
 14   1   6 attrs=dim
 15   0   1 bg=AnsiValue(237)
 15   1   1 fg=Black bg=White
 15   2   3 bg=AnsiValue(237) attrs=dim
 15   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 15  15  65 bg=AnsiValue(237)
 16   1   4 attrs=dim
 17   1   4 attrs=dim
 18   1   4 attrs=dim
 20   2  26 attrs=dim
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  64 bg=AnsiValue(233)
 21  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
